Card alignment fixed, also card images.

--- a/src/app/components/body/products/products.component.scss
+++ b/src/app/components/body/products/products.component.scss
@@ -3,10 +3,10 @@
   float: left;
 }
 .card {
-  width: 19.2rem;
-  max-width: 25rem;
-  height: 25em;
-  max-height: 25em;
+  width: 310px;
+  max-width: 310px;
+  height: 450px;
+  max-height: 500px;
   background-color: #f8f9fa!important;
 }
 
